Criado detalhar venda

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 
         <!-- Controllers APP -->
         <script src="js/angular/controllers/vendas.js"></script>
+        <script src="js/angular/controllers/detalharVenda.js"></script>
 
          <!-- Services APP -->
         <script src="js/angular/services/serverRequest.js"></script>
+        <script src="js/angular/services/redirectRequest.js"></script>
 
         <!-- Custom Theme Scripts -->
         <script src="js/custom.min.js"></script>
